# rocket_diving

./: Cargo.toml  README.md  rustfmt.toml
book_example/: Cargo.toml
book_example/src/: lib.rs  main.rs
book_example/src/handlers/: book.rs
first_gateway/: Cargo.toml
first_gateway/src/: config.rs  lib.rs  main.rs  test.rs
first_gateway/src/handlers/: index.rs
second_gateway/: Cargo.toml
src/: lib.rs  main.rs
src/first_gateway/handlers/: index.rs
src/handlers/: mod.rs  some_str.rs
