[workspace]
members = [
    "first_gateway",
    "book_example",
]

[workspace.dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
utoipa = { version = "2", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "2", features = ["rocket"] }
validator = { version = "0.15", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
