[package]
name = "book_example"
version = "0.1.0"
edition = "2021"

[lib]
name = "book_example"
path = "src/lib.rs"

[[bin]]
name = "book_example"
path = "src/main.rs"

[dependencies]
rocket = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true } 
utoipa-swagger-ui = { workspace = true }
